fix: correct alignment of table cells after rowspan

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -50,4 +50,8 @@ a.btn {
     &.max-w-none {
         max-width: none;
     }
+
+    th[rowspan] + td {
+        padding-left: 0;
+    }
 }
